@@ -1,3 +1,11 @@
+2010-11-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* Makefile.am (libquadmath_la_LIBADD): Move -lm ...
+	(libquadmath_la_LDFLAGS): ... here.
+	(quadmath.map-sun): Tabify.
+	Fix sed expression.
+	* Makefile.in: Regenerate.
+
 2010-11-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
 	    Tobias Burnus  <burnus@net-b.de>
 
